@@ -120,6 +120,38 @@
                     <dt>[LANG]helpItemDescNick[/LANG]</dt>
                     <dd>[LANG]helpItemCodeNick[/LANG]</dd>
                 </dl>
+                <dl>
+                    <dt>Speak as Site BOT (Staff Only)</dt>
+                    <dd>/takeover Text</dd>
+                </dl>
+                <dl>
+                    <dt>Make an announcement and sitewide PM (Staff Only)</dt>
+                    <dd>/announce Text</dd>
+                </dl>
+                <dl>
+                    <dt>Last Seen: When username last commented in chat</dt>
+                    <dd>/seen username</dd>
+                </dl>
+                <dl>
+                    <dt>Mentions: Last 25 posts where your nick was mentioned(Private)</dt>
+                    <dd>/mentions</dd>
+                </dl>
+                <dl>
+                    <dt>Reputation: Give rep gift</dt>
+                    <dd>/rep username</dd>
+                </dl>
+                <dl>
+                    <dt>Karma: Give karma gift</dt>
+                    <dd>/gift username</dd>
+                </dl>
+                <dl>
+                    <dt>Stats: View users stats</dt>
+                    <dd>/stats username</dd>
+                </dl>
+                <dl>
+                    <dt>Game Stats: View Blackjack and Casino Stats</dt>
+                    <dd>/casino</dd>
+                </dl>
             </div>
         </div>
         <div id="settingsContainer" style="display:none;">
